create More products

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <body>
     <div class="header">
       <h1>Hello Kuponim</h1>
+      <p>
+        There is example of OOP! Using different classes for Cupons and
+        Discounts
+      </p>
+      <p>Pls. see console log</p>
     </div>
   </body>
 </html>
